<resources>
    <string name="app_name">Fitness Pro</string>

    <string name="show_exercise">Start</string>
    <string name="cancel">Cancel</string>
    <string name="log_meal">Log Meal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_title_cardio">Cardio</string>
    <string name="navigation_title_strength">Strength</string>
    <string name="navigation_title_flexibility">Flexibility</string>
    <string name="navigation_title_diet">Diet</string>
    <string name="navigation_title_my_fitness">My Fitness</string>

    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_search">Search</string>
    <string name="action_user">User</string>
    <string name="message_quit">Quitting Fitness Pro App...</string>
    <string name="default_name">User Name</string>

    <string name="my_goals">My Goals</string>
    <string name="my_progress">My Progress</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>

    <string name="meal01">Meal 1 - Breakfast</string>
    <string name="meal02">Meal 2 - Morning Snack</string>
    <string name="meal03">Meal 3 - Lunch</string>
    <string name="meal04">Meal 4 - Afternoon Snack</string>
    <string name="meal05">Meal 5 - Dinner</string>
    <string name="meal06">Meal 6 - Evening Snack</string>

    <string name="calories_hint">Enter calories here</string>
    <string name="meal_notes_hint">Enter meal notes here</string>

    <string name="age">Age</string>
    <string name="start_weight">Starting Weight</string>
    <string name="start_BMI">Body Mass Index</string>

    <string-array name="meal01_details">
        <item>This meal starts your day by giving you foods that allow your body to have energy for your morning tasks and or exercise.</item>
        <item>Water</item>
    </string-array>
    <string-array name="meal02_details">
        <item>This light snack allows gives your body the fuel to continue to burn calories at a steady pace.</item>
        <item>Water</item>
    </string-array>
    <string-array name="meal03_details">
        <item>This is generally your mid-day meal and should include both carbohydrates and protein.</item>
        <item>Water</item>
    </string-array>
    <string-array name="meal04_details">
        <item>This light mid afternoon snack provides your body with a steady stream of nutrition to help keep your metabolism high.</item>
        <item>Water</item>
    </string-array>
    <string-array name="meal05_details">
        <item>This is the last relatively large meal of the day.  It provides your body with the nutrients you will need to build and maintain muscle as well as keep your metabolism high.</item>
        <item>Water</item>
    </string-array>
    <string-array name="meal06_details">
        <item>This last light snack of the day should be considered optional.  Depending on your health and fitness goals, this may provide some necessary calories and nutrients for your body.</item>
        <item>Water</item>
    </string-array>

    <!-- Strength Exercise Strings -->
    <string name="pushups">Pushups</string>
    <string name="squats">Squats</string>
    <string name="crunch">Crunch</string>
    <string name="squat_thrust">Squat Thrust</string>

    <!-- Cardio Exercise Strings -->
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>
    <string name="swimming">Swimming</string>
    <string name="jump_rope">Jumping Rope</string>
    <string name="treadmill_run">Treadmill Run</string>
    <string name="treadmill_walk">Treadmill Walk</string>
    <string name="spin">Spin</string>

    <!-- Flexibility Exercise Strings -->
    <string name="yoga_poses">Yoga Poses</string>
    <string name="runner_stretches">Runner Stretches</string>
    <string name="standing_stretch">Standing Stretch</string>
    <!-- Yoga -->
    <string name="camel_pose">Camel Pose</string>
    <string name="cobra_pose">Cobra Pose</string>
    <string name="triangle">Extended Triangle Pose</string>
    <!-- Runner -->
    <string name="calf_stretch">Calf Stretch</string>
    <string name="hamstring_stretch">Hamstring Stretch</string>
    <string name="quadricep_stretch">Quadricep Stretch</string>
    <string name="iliotibia_band_stretch">Iliotibia Band Stretch</string>

    <string-array name="fitness_goals_array">
        <item>Weight Loss</item>
        <item>Increase Strength</item>
        <item>Increase Endurance</item>
    </string-array>

    <string name="PREF_FIT_NAME">PREF_FIT_NAME</string>
    <string name="BASELINE_FIT_WEIGHT">BASELINE_FIT_WEIGHT</string>
    <string name="BASELINE_FIT_HEIGHT">BASELINE_FIT_HEIGHT</string>
    <string name="PREF_FIT_AGE">PREF_FIT_AGE</string>
    <string name="pref_fitness_core_title">Fitness Pro Settings</string>
    <string name="pref_baseline_fitness_title">Baseline Fitness</string>
    <string name="pref_baseline_fitness_settings">baseline</string>
    <string name="pref_name_title">Name</string>
    <string name="pref_weight_title">Weight</string>
    <string name="pref_height_title">Height</string>
    <string name="pref_age_title">Age</string>
    <string name="pref_weight_hint">Enter your weight here</string>
    <string name="pref_height_hint">Enter your height here</string>
    <string name="pref_age_hint">Enter your age here</string>
    <string name="pref_default_name">Anonymous User</string>
    <string name="vital_signs_title">Vital Signs</string>
    <string name="vital_signs_message">You are at 100 percent of your goals</string>

    <string name="placeholder">click me!</string>

    <!-- ERROR MESSAGES -->
    <string name="invalid_orientation_error">invalid orientation</string>
    <string name="my_fitness_menu_item">My Fitness</string>
    <string name="menu_item_update_profile_photo">Update Profile Photo</string>

</resources>
