<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_baseline_fitness_title"
        android:key="@string/pref_baseline_fitness_settings">

        <EditTextPreference
            android:defaultValue="@string/pref_default_name"
            android:hint="Enter your name here"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_name_title"
            android:key="PREF_FIT_NAME" />
        <EditTextPreference
            android:defaultValue="0"
            android:hint="@string/pref_weight_hint"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_weight_title"
            android:key="BASELINE_FIT_WEIGHT" />
        <EditTextPreference
            android:defaultValue="0"
            android:hint="@string/pref_height_hint"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_height_title"
            android:key="BASELINE_FIT_HEIGHT" />
        <EditTextPreference
            android:defaultValue="21"
            android:hint="@string/pref_age_hint"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_age_title"
            android:key="PREF_FIT_AGE" />
    </PreferenceCategory>

</PreferenceScreen>