<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jaydot2.fitnessapp.basic.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="100"
        android:title="@string/action_quit"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/action_user"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="ifRoom"></item>

</menu>