<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dietTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/primary_text"/>

    <Button
        android:id="@+id/dietLogMealBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_meal"/>

    <EditText
        android:id="@+id/caloriesEditText"
        android:hint="@string/calories_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/mealNotesEditText"
        android:hint="@string/meal_notes_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/mailTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TimePicker>

    <ImageView
        android:id="@+id/dietImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="center"/>

</LinearLayout>